# onboarding_agent

./: .env.example  .gitignore  DEMO_GUIDE.md  README.md  init_db.py  pyproject.toml  requirements.txt
knowledge/: role_policies.md
src/onboarding_agent/: api.py  crew.py  main.py
src/onboarding_agent/config/: agents.yaml  tasks.yaml
src/onboarding_agent/tools/: __init__.py  github_tool.py  rag_tool.py
