[project]
name = "onboarding_agent"
version = "0.1.0"
description = "onboarding-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "PyGithub>=2.5.0",
    "chromadb>=0.5.0",
    "requests>=2.32.0",
]

[project.scripts]
onboarding_agent = "onboarding_agent.main:run"
run_crew = "onboarding_agent.main:run"
train = "onboarding_agent.main:train"
replay = "onboarding_agent.main:replay"
test = "onboarding_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.crewai]
type = "crew"
